@@ -1821,6 +1821,8 @@ INSERT INTO uiconfig (section, var, value)
 INSERT INTO uiconfig (section, var, value, description, disabled)
 	VALUES ('userpanel', 'queues', '1', '', 0);
 INSERT INTO uiconfig (section, var, value, description, disabled)
+	VALUES ('userpanel', 'tickets_from_selected_queues', '0', '', 0);
+INSERT INTO uiconfig (section, var, value, description, disabled)
 	VALUES ('userpanel', 'default_userid', '0', '', 0);
 INSERT INTO uiconfig (section, var, value, description, disabled)
 	VALUES ('userpanel', 'debug_email', '', '', 0);
@@ -1864,4 +1866,4 @@ INSERT INTO nastypes (name) VALUES ('usrhiper');
 INSERT INTO nastypes (name) VALUES ('other');
 
 # --------------------------------------------------------
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2014020400');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2014021400');
