@@ -43,6 +43,7 @@ if (defined('USERPANEL_SETUPMODE'))
 	$SMARTY->assign('userlist', $LMS->GetUserNames());
 	$SMARTY->assign('queuelist', $LMS->GetQueueNames());
 	$SMARTY->assign('queues', explode(';', $LMS->CONFIG['userpanel']['queues']));
+	$SMARTY->assign('tickets_from_selected_queues', $LMS->CONFIG['userpanel']['tickets_from_selected_queues']);
         $SMARTY->assign('default_userid', $LMS->CONFIG['userpanel']['default_userid']);
         $SMARTY->assign('lms_url', $LMS->CONFIG['userpanel']['lms_url']);
         $SMARTY->assign('categories', $categories);
@@ -54,6 +55,8 @@ if (defined('USERPANEL_SETUPMODE'))
 	global $DB;
 	if (!empty($_POST['queues']) && array_walk($_POST['queues'], 'intval'))
 		$DB->Execute('UPDATE uiconfig SET value = ? WHERE section = \'userpanel\' AND var = \'queues\'', array(implode(';', $_POST['queues'])));
+	$DB->Execute('UPDATE uiconfig SET value = ? WHERE section = \'userpanel\' AND var = \'tickets_from_selected_queues\'',
+		array(intval($_POST['tickets_from_selected_queues'])));
 	$DB->Execute('UPDATE uiconfig SET value = ? WHERE section = \'userpanel\' AND var = \'default_userid\'',array($_POST['default_userid']));
 	$DB->Execute('UPDATE uiconfig SET value = ? WHERE section = \'userpanel\' AND var = \'lms_url\'',array($_POST['lms_url']));
 	$categories = array_keys((isset($_POST['lms_categories']) ? $_POST['lms_categories'] : array()));
