@@ -42,6 +42,8 @@ version ?.??.?? (????-??-??):
   - rtqueues: customers notifications about new ticket, new message and resolve ticket [chilan]
   - basic serwersms.pl api support [chilan]
   - basic smsapi.pl api support [chilan]
+  - userpanel: helpdesk: selection if all tickets are visible or only
+    those from selected queues [chilan]
 
 version 1.11.14 (2013-03-25):
 
